Update project dependencies and improve code structure
- Added `.env` to the `.gitignore` file to prevent sensitive information from being tracked.
- Included `spring-dotenv` dependency in `pom.xml` for environment variable management.
- Refactored `LocalTimeConverter` to use pattern matching for cleaner code.
- Simplified `DoctorInfoDropDown` and `LoginResponse` classes by using Lombok annotations for getters and setters.
- Updated `SecurityConfig` to use a more concise method for disabling CSRF protection.
- Enhanced `SessionService` by changing method calls to access fields directly in the `SessionData` record.
- Improved test assertions in various test classes for better readability and consistency.